--- a/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/03 Scikit-Learn/05 Save Models.html
+++ b/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/03 Scikit-Learn/05 Save Models.html
@@ -13,8 +13,9 @@
 
     <li>Call the <code>save</code> method the file path.</li>
     <div class="section-example-container">
-        <pre class="python">self.model.save(file_name)</pre>
+        <pre class="python">joblib.dump(self.model, file_name)</pre>
     </div>
+    <p>If you dump the model using the <code>joblib</code> module before you save the model, you don't need to retrain the model.</p>
 
     <li>Call the <code>Save</code> method with the key.</li>
     <div class="section-example-container">
