Writing Algorithm / Machine Learning / hmmlearn

--- a/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/04 Hmmlearn/05 Save Models.html
+++ b/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/04 Hmmlearn/05 Save Models.html
@@ -1,4 +1,4 @@
-<p>You can save <code>sklearn</code> models using the ObjectStore by following these steps.</p>
+<p>You can save <code>hmmlearn</code> models using the ObjectStore by following these steps.</p>
 <ol>
     <li>Set the key name of the model to be stored in the ObjectStore.</li>
     <div class="section-example-container">
