--- a/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/04 Hmmlearn/06 Load Models.html
+++ b/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/04 Hmmlearn/06 Load Models.html
@@ -1,4 +1,4 @@
-<p>You can load and trade with pre-trained <code>sklearn</code> models that saved in ObjectStore. To do so, follow these steps to load it:</p>
+<p>You can load and trade with pre-trained <code>hmmlearn</code> models that saved in ObjectStore. To do so, follow these steps to load it:</p>
 <ol>
     <li>Check if the <code>ObjectStore</code> already has the model saved during <code>Initialize</code> with the model key.</li>
     <div class="section-example-container">
