--- a/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/04 Hmmlearn/02 Import Libraries.html
+++ b/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/04 Hmmlearn/02 Import Libraries.html
@@ -1,9 +1,8 @@
-<p>Import the <code>sklearn</code>, and <code>joblib</code> libraries.</p>
+<p>Import the <code>hmmlearn</code>, and <code>joblib</code> libraries.</p>
 
 <div class="section-example-container">
     <pre class="python">from AlgorithmImports import *
-from sklearn.svm import SVR
-from sklearn.model_selection import GridSearchCV
+from hmmlearn import hmm
 import joblib</pre>
 </div>
 
