--- a/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/09 XGBoost/05 Save Models.html
+++ b/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/09 XGBoost/05 Save Models.html
@@ -11,7 +11,7 @@
     </div>
     <p>This method returns the file path where the model will be stored.</p>
 
-    <li>Call the <code>save</code> method the file path.</li>
+    <li>Call the <code>dump</code> method the file path.</li>
     <div class="section-example-container">
         <pre class="python">joblib.dump(self.model, file_name)</pre>
     </div>
