--- a/03 Research Environment/08 Machine Learning/06 Gplearn/04 Prepare Data.html
+++ b/03 Research Environment/08 Machine Learning/06 Gplearn/04 Prepare Data.html
@@ -10,7 +10,7 @@
     <tbody>
         <tr>
             <td>Features</td>
-            <td>Daily percent change of the open, high, low, close, and volume of the SPY over the last 5 days</td>
+            <td>Daily percent change of the close price of the SPY over the last 5 days</td>
         </tr>
         <tr>
             <td>Labels</td>
