--- a/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/05 GPlearn/04 Train Models.html
+++ b/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/05 GPlearn/04 Train Models.html
@@ -62,7 +62,7 @@
 </ol>
 
 <h4>Build Model</h4>
-<p>Follow the below steps to create a method to build the model.</p>
+<p>Follow the below steps to build the model.</p>
 <ol>
     <li>Get processed training data.</li>
     <div class="section-example-container">
@@ -88,7 +88,7 @@
 </ol>
 
 <h4>Fit Model</h4>
-<p>Follow the below steps to create a method to fit the model.</p>
+<p>Follow the below steps to fit the model with the prepared data.</p>
 <ol>
     <li>Get processed training data.</li>
     <div class="section-example-container">
