--- a/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/09 XGBoost/04 Train Models.html
+++ b/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/09 XGBoost/04 Train Models.html
@@ -72,7 +72,7 @@
 </ol>
 
 <h4>Build and Fit Model</h4>
-<p>Follow the below steps to create a method to build and fit the model.</p>
+<p>Follow the below steps to build and fit the model.</p>
 <ol>
     <li>Get processed training data.</li>
     <div class="section-example-container">
