--- a/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/08 Tslearn/04 Train Models.html
+++ b/02 Writing Algorithms/30 Machine Learning/03 Popular Libraries/08 Tslearn/04 Train Models.html
@@ -31,7 +31,7 @@
 </ol>
 
 <h4>Build and Fit Model</h4>
-<p>Follow the below steps to create a method to build and fit the model.</p>
+<p>Follow the below steps to build and fit the model.</p>
 <ol>
     <li>Call the <code>TimeSeriesKMeans</code> constructor with a preset number of clusters, choice of distance measurement.</li>
     <div class="section-example-container">
